# inspector-gadget

./: .gitignore  .inspector-config-terraform.yml  .inspector-config.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  justfile
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump_new_version.yml  ci.yml  docker.yml  release.yml  release_v2.yml  rust.yml
docs/examples/others/: dagger-doc-links  inspect-result-developer.hashicorp.com.json
docs/examples/shadcn-docs/: how-to.md  shadcn-components-config.yml  shadcn-components-links
docs/examples/terragrunt-docs/: how-to.md  terragrunt-docs-links  terragrunt-inspector-config.yml
install/: install.sh
scripts/: install.sh  install_from_source.sh
src/: config.rs  link.rs  main.rs  output.rs  tests.rs
