[package]
name = "inspector-gadget"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clipboard = "0.5"
indicatif = "0.16"
log = "0.4"
env_logger = "0.9"
url = { version = "2.2", features = ["serde"] }
regex = "1.5"