[package]
name = "inspector-cli"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A CLI tool for inspecting and analyzing web links"
license = "MIT"
repository = "https://github.com/yourusername/inspector-cli"
readme = "README.md"
keywords = ["cli", "web", "inspector", "links"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
clap = "2.33"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clipboard = "0.5"
indicatif = "0.16"
log = "0.4"
env_logger = "0.9"
url = { version = "2.2", features = ["serde"] }
regex = "1.5"
dirs = "4.0"
thiserror = "1.0"

[[bin]]
name = "inspector-cli"
path = "src/main.rs"