[package]
name = "inspector-gadget"
version = "0.1.0"
authors = ["Alex Torres <alex_torres@outlook.com>"]
edition = "2021"
description = "A CLI tool for inspecting and analyzing web links"
license = "MIT"
repository = "https://github.com/Excoriate/inspector-gadget"
readme = "README.md"
keywords = ["cli", "web", "inspector", "links", "crawler"]
categories = ["command-line-utilities", "web-programming"]
documentation = "https://docs.rs/inspector-gadget"

[dependencies]
clap = "2.33"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clipboard = "0.5"
indicatif = "0.16"
log = "0.4"
env_logger = "0.9"
url = { version = "2.2", features = ["serde"] }
regex = "1.5"
dirs = "4.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.2"

[[bin]]
name = "inspector-gadget"
path = "src/main.rs"